# meta-signal-spirit

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
examples/: canonical.nota
schema/: meta-signal-spirit.concept.schema  meta-signal.schema
src/: lib.rs
src/schema/: meta_signal.rs  mod.rs
tests/: frame.rs  round_trip.rs  true_schema_nota_projection.rs
