[package]
name         = "meta-signal-spirit"
version      = "0.7.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/meta-signal-spirit"
description  = "MetaSignal contract for privileged spirit lifecycle and policy."
publish      = false
links        = "meta-signal-spirit"
build        = "build.rs"

[lib]
name = "meta_signal_spirit"
path = "src/lib.rs"

[features]
default = []
nota-text = ["dep:nota", "signal-domain/nota-text", "signal-frame/nota-text", "signal-spirit/nota-text"]

[dependencies]
signal-domain = { git = "https://github.com/LiGoldragon/signal-domain.git", branch = "main", default-features = false }
signal-frame  = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
signal-spirit = { git = "https://github.com/LiGoldragon/signal-spirit.git", rev = "982e40465fd99f7bb3da237b4300760f4c89076a", default-features = false }
nota     = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main", optional = true }
rkyv          = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror     = "2"

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", rev = "a4b46ffffe5307eca3e1537539d0a70884955b4c" }

[dev-dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"

[patch."https://github.com/LiGoldragon/nota-next.git"]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
nota-derive = { package = "nota-derive", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }

[patch."https://github.com/LiGoldragon/schema-next.git"]
schema = { package = "schema", git = "https://github.com/LiGoldragon/schema.git", rev = "92bed64ad644ce4caa2827398ada5b7b79221165" }
schema-cc = { package = "schema-cc", git = "https://github.com/LiGoldragon/schema.git", rev = "92bed64ad644ce4caa2827398ada5b7b79221165" }

[patch."https://github.com/LiGoldragon/schema-rust-next.git"]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", rev = "a4b46ffffe5307eca3e1537539d0a70884955b4c" }
