[package]
name         = "meta-signal-spirit"
version      = "0.7.1"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/meta-signal-spirit"
description  = "MetaSignal contract for privileged spirit lifecycle and policy."
publish      = false
links        = "meta-signal-spirit"
build        = "build.rs"

[lib]
name = "meta_signal_spirit"
path = "src/lib.rs"

[features]
default = []
nota-text = ["dep:nota", "signal-domain/nota-text", "signal-frame/nota-text", "signal-spirit/nota-text"]

[dependencies]
signal-domain = { git = "https://github.com/LiGoldragon/signal-domain.git", rev = "801e1c5bcc824c9760e246205826e3c8e962d005", default-features = false }
signal-frame  = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
signal-spirit = { git = "https://github.com/LiGoldragon/signal-spirit.git", rev = "eba2afe88e03939fba9c01e4f2c82b0166a46cd6", default-features = false }
nota     = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main", optional = true }
rkyv          = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror     = "2"

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", rev = "3278fbc6e6593c044437b3ee5ca1fe71cac344c1" }

[dev-dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
schema-language = { git = "https://github.com/LiGoldragon/schema-language.git", rev = "6aae825d668e3f607a2754afa6b7d94e9f246c41" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"

[patch."https://github.com/LiGoldragon/nota-next.git"]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
nota-derive = { package = "nota-derive", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
