[package]
name         = "meta-signal-spirit"
version      = "0.7.1"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/meta-signal-spirit"
description  = "MetaSignal contract for privileged spirit lifecycle and policy."
publish      = false
links        = "meta-signal-spirit"
build        = "build.rs"

[lib]
name = "meta_signal_spirit"
path = "src/lib.rs"

[features]
default = []
nota-text = ["dep:nota", "signal-domain/nota-text", "signal-frame/nota-text", "signal-spirit/nota-text"]

[dependencies]
signal-domain = { git = "https://github.com/LiGoldragon/signal-domain.git", rev = "36ba3904eaeb71a3e274219c5f3916c3c8e716cc", default-features = false }
signal-frame  = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
signal-spirit = { git = "https://github.com/LiGoldragon/signal-spirit.git", rev = "43bc1c1e0ba0b5bf9fa125df3469a8724fa2fd61", default-features = false }
nota     = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main", optional = true }
rkyv          = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror     = "2"

[build-dependencies]
schema-rust = { package = "schema-rust", git = "https://github.com/LiGoldragon/schema-rust.git", rev = "6434c006672307565c991c7e476a6c75da59755f" }

[dev-dependencies]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
schema-language = { git = "https://github.com/LiGoldragon/schema-language.git", rev = "0ee452a42b0c41c00455411a55d45afecbef910a" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"

[patch."https://github.com/LiGoldragon/nota-next.git"]
nota = { package = "nota", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
nota-derive = { package = "nota-derive", git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
